# openFrameworks

./: CHANGELOG.md  CMakeLists.txt  build_windows.bat
BACKUP/video/: ofVideoPlayer.h
addons/ofxNetwork/src/: ofxNetworkUtils.h  ofxTCPClient.h  ofxTCPManager.cpp  ofxTCPManager.h
addons/ofxOpenCv/libs/opencv/lib/vs/: opencv_calib3d247.lib  opencv_features2d247.lib  opencv_flann247.lib  opencv_gpu247.lib  opencv_gpu247d.lib  opencv_haartraining_engine.lib  opencv_haartraining_engined.lib  opencv_highgui247.lib  opencv_highgui247d.lib  opencv_ml247.lib  opencv_ml247d.lib  opencv_nonfree247.lib  opencv_nonfree247d.lib  opencv_objdetect247.lib  opencv_photo247.lib  opencv_photo247d.lib  zlib.lib  (+8 more)
addons/ofxXmlSettings/libs/: tinyxml.cpp
apps/devApps/projectGenerator/src/utils/: Utils.cpp
libs/glfw/include/GLFW/: glfw3.h
libs/glfw/lib/vs/: glfw3.lib
libs/openFrameworks/: ofMain.h
libs/openFrameworks/app/: ofAppGLFWWindow.cpp  ofAppGLFWWindow.h  ofAppGlutWindow.cpp  ofAppRunner.cpp  ofBaseApp.h
libs/openFrameworks/events/: ofEvents.cpp  ofEvents.h
libs/openFrameworks/gl/: ofFbo.cpp  ofGLProgrammableRenderer.cpp  ofGLRenderer.cpp  ofVbo.cpp
libs/openFrameworks/graphics/: ofGraphics.cpp  ofImage.cpp  ofTrueTypeFont.cpp
libs/openFrameworks/math/: ofVec2d.h
libs/openFrameworks/types/: ofBaseTypes.cpp  ofBaseTypes.h  ofColor.cpp  ofParameter.h  ofParameterGroup.cpp  ofTypes.h
libs/openFrameworks/utils/: ofConstants.h  ofSystemUtils.cpp  ofSystemUtils.h  ofURLFileLoader.cpp  ofUtils.cpp  ofUtils.h
libs/openFrameworksCompiled/project/linux/: config.linux.default.mk
libs/openFrameworksCompiled/project/osx/: config.osx.default.mk
libs/openFrameworksCompiled/project/vs/: openFrameworksDebug.props  openFrameworksDebugUpper.props  openFrameworksRelease.props  openFrameworksReleaseUpper.props  openframeworksLib.sln  openframeworksLib.vcxproj  openframeworksLib.vcxproj.filters
libs/poco/include/Poco/: UnWindows.h
libs/poco/lib/vs/: PocoCryptomd.lib  PocoCryptomdd.lib  PocoJSONmd.lib  PocoMongoDBmd.lib  PocoUtilmd.lib  PocoZipmd.lib
libs/poco/lib/vs/old/: PocoCryptomd.lib  PocoCryptomdd.lib  PocoNetSSLmd.lib
libs/quicktime/include/: Processes.h
scripts/linux/: compileOF.sh
src/: CMakeLists.txt
src/3d/: ofCamera.cpp  ofMesh.cpp
src/addons/ofxNetwork/src/: ofxTCPClient.cpp  ofxTCPManager.h
src/app/: ofAppGLFWWindow.cpp  ofAppGLFWWindow.h  ofBaseApp.h
src/communication/: ofSerial.cpp
src/gl/: ofGLProgrammableRenderer.cpp  ofGLRenderer.cpp  ofGLRenderer.h
src/graphics/: ofGraphics.cpp  ofImage.cpp
src/math/: ofMath.cpp  ofMath.h  ofMatrix4x4.h  ofQuaternion.cpp  ofVec3d.h
src/types/: ofBaseTypes.cpp  ofBaseTypes.h  ofParameterGroup.h  ofTypes.h
src/utils/: ofConstants.h  ofUtils.cpp  ofUtils.h  ofXml.h
